# nix-odoo

./: README.md
odoo-13/: dev-server.sh  odoo.conf  shell.nix
odoo-13/xxx_addons/novacode_dev/models/: ir_attachment.py
odoo-14/: .envrc  AFTER_RESTORE.sh  AFTER_RESTORE.sql  dev-server.sh  pyproject.toml  shell.nix
odoo-14/xxx_addons/novacode_dev/: __manifest__.py
odoo-14/xxx_addons/novacode_dev/data/: ir_actions_server.xml
odoo-15/: .envrc  AFTER_RESTORE.sql  README.md  dev-server.sh  odoo.conf  pyproject.toml  shell.nix  wkhtmltopdf.nix
odoo-15/data/: prepare.sql
odoo-15/pre-commit_EXAMPLES/: .gitlint_EXAMPLE
odoo-15/xxx_addons/novacode_dev/: __manifest__.py
odoo-15/xxx_addons/novacode_dev/data/: ir_actions_server.xml
odoo-15/xxx_addons/novacode_dev/models/: __init__.py  ir_actions_server.py  mail_thread.py
odoo-16/: dev-server.sh  shell.nix
odoo-16/pre-commit_EXAMPLES/: .gitlint_EXAMPLE
odoo-16/xxx_addons/novacode_dev/: __manifest__.py
odoo-16/xxx_addons/novacode_dev/data/: ir_actions_server.xml
odoo-16/xxx_addons/novacode_dev/models/: __init__.py
odoo-17/: .envrc  AFTER_RESTORE.sql  dev-server.sh  odoo.conf  shell.nix
odoo-17/pre-commit_EXAMPLES/: .pre-commit-config.yaml_EXAMPLE
odoo-17/xxx_addons/novacode_dev/: __manifest__.py
odoo-18/: dev-server.sh  odoo.conf  shell.nix
odoo-18/pre-commit_EXAMPLES/: .pre-commit-config.yaml_EXAMPLE
odoo-18/xxx_addons/novacode_dev/: __manifest__.py
